k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simpleapi-service
spec:
  selector:
    app: simpleapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
  type: LoadBalancer
